# CloudV2Ray

./: .eslintignore  .eslintrc.cjs  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js  tsconfig.json
scripts/: vite.config.ts
src/: App.tsx  ContextMenu.tsx  Layout.tsx  main.tsx  style.css  theme-colors.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tencent.rs  test.rs  util.rs  v2ray.rs
src-tauri/src/sysproxy/: README.md  macos.rs  mod.rs  windows.rs
src/assets/: sockstun.conf.template.yaml  tun2socks.conf.template.yaml  v2ray.conf.template.json
src/assets/shell-template/: agent.sh
src/service/: instance.ts  message.tsx  region.ts  settings.ts  tencent.ts  util.ts
src/store/: global.ts  install.ts  locale.ts  log.ts  theme.ts
src/views/instance/: Control.tsx  DelayDestroy.tsx  Install.tsx  Instance.tsx  Price.tsx  helper.ts  index.tsx
src/views/logview/: index.tsx  listen.tsx
src/views/overview/: Balance.tsx  Bandwind.tsx  Control.tsx  Install.tsx  Instance.tsx  Price.tsx  Socks.tsx  Sysproxy.tsx  index.tsx
src/views/settings/: Export.tsx  Instance.tsx  index.tsx
tauri-plugin-cloudv2ray/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
tauri-plugin-cloudv2ray/.github/workflows/: audit.yml  clippy.yml  test.yml
tauri-plugin-cloudv2ray/android/: build.gradle.kts  settings.gradle
tauri-plugin-cloudv2ray/android.bk/src/main/java/: PluginReceiver.kt  V2RayVpnService.kt
tauri-plugin-cloudv2ray/android.bk/src/main/java/com/plugin/cloudv2ray/: Packet.java
tauri-plugin-cloudv2ray/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-cloudv2ray/android/src/main/java/: CloudV2RayPlugin.kt  Example.kt  ExamplePlugin.kt  PluginReceiver.kt  TProxyService.kt  V2RayVpnService.kt
tauri-plugin-cloudv2ray/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-cloudv2ray/guest-js/: index.ts
tauri-plugin-cloudv2ray/permissions/: default.toml
tauri-plugin-cloudv2ray/permissions/autogenerated/: reference.md
tauri-plugin-cloudv2ray/permissions/autogenerated/commands/: getMobileDir.toml  runV2RayCore.toml  startV2RayCore.toml  startVpn.toml  stopV2RayCore.toml  stopVpn.toml  tauri_start_tun2socks_server.toml  tauri_start_v2ray_server.toml  tauri_stop_tun2socks_server.toml  tauri_stop_v2ray_server.toml
tauri-plugin-cloudv2ray/permissions/schemas/: schema.json
tauri-plugin-cloudv2ray/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs  tun.rs  util.rs  v2ray.rs
