[package]
name = "cloudv2ray"
version = "0.0.0"
description = "Cloud-based V2Ray GUI Client"
authors = ["yuhangge"]
edition = "2021"
license = "MIT"
repository = "https://github.com/YuhangGe/CloudV2Ray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cloudv2ray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri-plugin-cloudv2ray = { path = "../tauri-plugin-cloudv2ray" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-http = "2.0.0-beta"
anyhow = "1"
anyhow-tauri = "1"
sha2 = "0.10"
chrono = "0.4"
hmac = "0.12"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
tun2proxy = "0.2"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
zip-extract = "0.1.3"
tokio= {version = "*", features = ["process", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52", features = ["transactions"] }
windows = { version = "0.57", features = [
    "Win32_Networking_WinInet",
    "Win32_NetworkManagement_Rras",
    "Win32_Foundation",
] }
