[package]
name = "cloudv2ray"
version = "0.0.0"
description = "Cloud-based V2Ray GUI Client"
authors = ["yuhangge"]
edition = "2021"
license = "MIT"
repository = "https://github.com/YuhangGe/CloudV2Ray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cloudv2ray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri-plugin-cloudv2ray = { path = "../tauri-plugin-cloudv2ray" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-http = "2"
anyhow = "1"
anyhow-tauri = "1"
sha2 = "0.10"
chrono = "0.4"
hmac = "0.12"
uuid = { version = "1.11", features = ["v4"] }
tauri-plugin-store = "2"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52", features = ["transactions"] }
windows = { version = "0.58", features = [
    "Win32_Networking_WinInet",
    "Win32_NetworkManagement_Rras",
    "Win32_Foundation",
] }
