[package]
name = "tauri-plugin-cloudv2ray"
version = "0.0.0"
authors = [ "Yuhang Ge" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-cloudv2ray"

[dependencies]
tauri = { version = "2.0.0-beta" }
serde = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }
