[package]
name = "tauri-plugin-cloudv2ray"
version = "0.0.0"
authors = ["Yuhang Ge"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-cloudv2ray"

[dependencies]
tauri = { version = "2" }
serde = "1"
anyhow = "1"
anyhow-tauri = "1"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
zip-extract = "0.2.1"
tokio = { version = "*", features = ["process", "macros"] }

# tokio-util = "0.7"
# tun2proxy = "0.2"
# tun2 = { version = "2", features = ["async"] }
# log = "0.4"
# jni = "0.19"
# android_logger = "0.14"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
